; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-loop-stop.c_prepare_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-loop-stop.c_prepare_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@prepare_handle = common dso_local global i32 0, align 4
@prepare_called = common dso_local global i64 0, align 8
@num_ticks = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @prepare_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @prepare_cb(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp eq i32* %3, @prepare_handle
  %5 = zext i1 %4 to i32
  %6 = call i32 @ASSERT(i32 %5)
  %7 = load i64, i64* @prepare_called, align 8
  %8 = add nsw i64 %7, 1
  store i64 %8, i64* @prepare_called, align 8
  %9 = load i64, i64* @prepare_called, align 8
  %10 = load i64, i64* @num_ticks, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %15

12:                                               ; preds = %1
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @uv_prepare_stop(i32* %13)
  br label %15

15:                                               ; preds = %12, %1
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_prepare_stop(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
